# claford

./: .gitignore  0_make_deps.sh  1_config.sh  2_make.sh  CMakeLists.txt  README.md  conanfile.txt  glfw_main.cpp  imgui.ini  notes.txt
.github/workflows/: workflowtest.yml
cmake/: EmbedFile.cmake  cpp_warnings.cmake
cmake/imgui/: CMakeLists.txt
src/: CMakeLists.txt  async_clang_format.cpp  async_clang_format.h  clang_format.cpp  clang_format.h  main.cpp  state.h  ui.h  ui_glfw_imgui.cpp  ui_glfw_imgui.h  util.cpp  util.h
